...
                )
                Spacer(modifier = Modifier.width(8.dp))
                if (isPortrait){
                    IconButton(onClick = { onToggleFavorite(coin) }) {
                        Icon(
                            imageVector = if (coin.isFavorite) Icons.Default.Favorite else Icons.Default.FavoriteBorder,
                            contentDescription = if (coin.isFavorite) "Favorite Icon" else "Favorite Border Icon",
                            tint = if (coin.isFavorite) MaterialTheme.colorScheme.primary else Color.Gray
                        )
                    }
                }
            }
            Text(
...
