...
    }
}

internal val previewCoin = Coin(
    id = "bitcoin",
    rank = 1,
    name = "Bitcoin",
    symbol = "BTC",
    marketCapUsd = 1234567890.0,
    priceUsd = 34567.89,
    changePercent24Hr = 12.34
).toCoinUi()
